[package]
name = "whale-in-a-bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-sdk-s3 = "1.38.0"
aws-types = "1.3.2"
clap = { version = "4.5.7", features = ["derive"] }
oci-distribution = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt"] }
